# hexlet-my-first-workflow

./: Makefile  README.md  pyproject.toml
.github/workflows/: hello-world.yml
