[tool.poetry]
name = "hexlet-my-first-workflow"
version = "0.1.0"
description = ""
authors = ["Евгений Чайка <chay67ka26@gmail.com>"]
readme = "README.md"
packages = [{include = "code"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
